--- a/package.json
+++ b/package.json
@@ -10,14 +10,13 @@
     "express-fileupload": "^1.2.1",
     "express-session": "^1.17.1",
     "mongodb": "^3.6.4",
+    "serve": "^11.3.2",
     "socket.io": "^3.1.1"
   },
   "devDependencies": {},
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC"
